# chargepal_map

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: config.yaml
config/camera_info/: T_flange2cam.toml  coefficients.toml
config/camera_info/realsense_tcp_cam/calibration/: coefficients.toml
config/cv_detector/: aruco_marker_ads.yaml  aruco_marker_ccs_female.yaml  aruco_marker_type2_female.yaml  aruco_marker_type2_male.yaml  aruco_pattern_ads.yaml  aruco_pattern_ads_adj.yaml  aruco_pattern_bat_socket_ccs_adj.yaml  aruco_pattern_car_socket_ccs_adj.yaml  charuco_calibration.yaml
config/detector/: aruco_marker_bat_socket_ccs_adj.yaml  charuco_ads_socket_ty2_adj.yaml
config/process/: connect_to_car.yaml  connect_to_car_twist.yaml  disconnect_from_car.yaml  disconnect_from_car_twist.yaml
config/state_machine/: arrange_job.yaml  attach_plug.yaml  completion.yaml  drive_free.yaml  failure.yaml  flip_arm.yaml  insert_plug.yaml  move_to_completion.yaml  move_to_plug_pre_attached.yaml  move_to_plug_pre_connected.yaml  move_to_plug_pre_obs.yaml  move_to_socket_pre_obs.yaml  move_to_start_ls.yaml  move_to_start_rs.yaml  move_to_ws.yaml  observe_plug.yaml  observe_socket.yaml  plug_in_ads_ac.yaml  release_plug.yaml  remove_plug.yaml  start.yaml  start_plugging.yaml  stop.yaml
config/ur_arm/: ur_control.toml  ur_pilot.toml  viewpoints_records.json
launch/: action_server.launch
scripts/: manipulation_server.py  manipulation_server_ui.py  map_action_client.py  plug_in_server.py  start_maps.py  state_machine_ui.py
src/chargepal_map/: __init__.py  core.py  job.py  jobs.py  smach.py
src/chargepal_map/processes/: connect_to_car.py  disconnect_from_car.py  outcomes.py  utils.py
src/chargepal_map/state_machine/: arm_status.py  connect_to_car.py  disconnect_from_car.py  outcomes.py  process.py  state_config.py  state_machine.py  step_by_user.py  user_srvs.py  utils.py
src/chargepal_map/state_machine/processes/: connect_to_car.py  disconnect_from_car.py  process.py
src/chargepal_map/state_machine/states/: __init__.py  arrange_job.py  attach_plug.py  base.py  calib_marker2socket.py  common.py  completion.py  connect_to_car.py  connect_to_car_electric.py  connect_to_car_twist.py  connect_to_car_twist_easy.py  disconnect_from_car.py  disconnect_from_car_electric.py  disconnect_from_car_twist.py  disconnect_from_car_twist_easy.py  drive_free.py  failure.py  flip_arm.py  insert_plug.py  malfunction.py  move_to.py  move_to_battery_obs.py  move_to_completion.py  move_to_incompletion.py  move_to_periphery_obs.py  move_to_plug_id_obs.py  move_to_plug_obs.py  move_to_plug_pre_pos.py  move_to_plug_scene_obs.py  move_to_recover_pre_pos.py  (+19 more)
src/chargepal_map/ui/: __init__.py  action_client.py  user_client.py  user_interface.py  user_server.py
srv/: User.srv
(+57 files in other folders)
